<?xml version="1.0" encoding="UTF-8"?>
<!--
  POM del MVP:
  - Mantiene solo lo necesario para:
    1) Exponer API REST (Spring Web)
    2) Validar DTOs de entrada (Validation)
    3) Mantener Security como placeholder (Spring Security)
    4) Conectar a Oracle vía JDBC (ojdbc)

  Se removieron:
  - JPA/Hibernate y PostgreSQL (no se usan en este MVP)
  - JWT libs (aún no hay autenticación real)
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
		<relativePath/>
	</parent>

	<groupId>com.netkrow</groupId>
	<artifactId>netkrow-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>NetKrow Backend</name>
	<description>Backend for RCA Wizard MVP</description>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!--
		  Spring Web:
		  - Permite crear Controllers REST: @RestController, @GetMapping, @PostMapping
		  - Incluye Jackson para JSON (serializa/deserializa automáticamente)
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!--
		  Validation:
		  - Permite anotar DTOs con @NotBlank, etc.
		  - Spring lo usa para validar automáticamente @RequestBody cuando pones @Valid
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!--
		  Spring Security (placeholder):
		  - Hoy NO protege nada (permitAll).
		  - Se deja para futuro: JWT/SSO/roles cuando se suba a web.
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!--
		  Oracle JDBC Driver:
		  - Permite conectarse a Oracle desde Java vía JDBC.
		  - Usamos DriverManager por simplicidad de MVP (sin pool).
		-->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>21.11.0.0</version>
		</dependency>

		<!-- Tests básicos -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Compilación Java 17 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<!-- Permite: mvn spring-boot:run -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>
 